--- a/aquacueui.html
+++ b/aquacueui.html
@@ -2,10 +2,8 @@
 <html>
 <head>
     <title>Aqua Cue</title>
-    <link href = "ui.css" rel = "stylesheet" type="text/css">
-    <script src = "ui.js" defer></script>
-
-
+    <link href="ui.css" rel="stylesheet" type="text/css">
+    <script src="ui.js" defer></script>
 </head>
 <body>
     <h1>Aqua Cue</h1>
@@ -14,16 +12,53 @@
         <form id="plant-form">
             <div class="form-group">
                 <label for="plant-name" class="form-label">Plant Name:</label>
-                <input type="text" id="plant-name" class="form-input" required>
+                <select id="plant-name" class="form-select" required>
+                    <option value="" disabled selected>Select a plant</option>
+                    <option value="Rose">Rose</option>
+                    <option value="Lily">Lily</option>
+                    <option value="Sunflower">Sunflower</option>
+                    <option value="Orchid">Orchid</option>
+                    <option value="Fern">Fern</option>
+                    <option value="Tulip">Tulip</option>
+                    <option value="Daisy">Daisy</option>
+                    <option value="Lavender">Lavender</option>
+                    <option value="Cactus">Cactus</option>
+                    <option value="Ivy">Ivy</option>
+                    <option value="Begonia">Begonia</option>
+                    <option value="Ficus">Ficus</option>
+                    <option value="Snake Plant">Snake Plant</option>
+                    <option value="Peace Lily">Peace Lily</option>
+                    <option value="ZZ Plant">ZZ Plant</option>
+                    <option value="Rosemary">Rosemary</option>
+                    <option value="Peony">Peony</option>
+                    <option value="Marigold">Marigold</option>
+                    <option value="Basil">Basil</option>
+                    <option value="Hibiscus">Hibiscus</option>
+                    <option value="Succulent">Succulent</option>
+                    <option value="Azalea">Azalea</option>
+                    <option value="Jasmine">Jasmine</option>
+                    <option value="Croton">Croton</option>
+                    <option value="Daffodil">Daffodil</option>
+                    <option value="Zinnia">Zinnia</option>
+                    <option value="Morning Glory">Morning Glory</option>
+                    <option value="Carnation">Carnation</option>
+                    <option value="Peperomia">Peperomia</option>
+                    <option value="Bird of Paradise">Bird of Paradise</option>
+                    <option value="Maidenhair Fern">Maidenhair Fern</option>
+                    <option value="Spider Plant">Spider Plant</option>
+                </select>
             </div>
+
             <div class="form-group">
                 <label for="days-since-watering" class="form-label">Days Since Last Watering:</label>
                 <input type="number" id="days-since-watering" class="form-input" required>
             </div>
+
             <div class="form-group">
                 <label for="growth-stage" class="form-label">Current Growth Stage:</label>
                 <input type="text" id="growth-stage" class="form-input" required>
             </div>
+
             <button type="submit" class="form-button">Submit</button>
         </form>
     </div>
@@ -31,69 +66,14 @@
     <div id="result-container" class="result-container"></div>
 
     <div class="flowers">
-        <div class="flower" style="top: 100px; left: 10px;">
-            <svg width="80" height="80">
-                <rect x="0" y="30" width="10" height="20" fill="#FF69B4" />
-                <rect x="15" y="0" width="10" height="20" fill="#FF69B4" />
-                <rect x="30" y="20" width="10" height="20" fill="#FF69B4" />
-                <rect x="45" y="10" width="10" height="20" fill="#FF69B4" />
-                <rect x="60" y="30" width="10" height="20" fill="#FF69B4" />
-            </svg>
-        </div>
-        <div class="flower" style="top: 200px; left: 30px;">
-            <svg width="80" height="80">
-                <rect x="0" y="30" width="10" height="20" fill="#FF4500" />
-                <rect x="15" y="0" width="10" height="20" fill="#FF4500" />
-                <rect x="30" y="20" width="10" height="20" fill="#FF4500" />
-                <rect x="45" y="10" width="10" height="20" fill="#FF4500" />
-                <rect x="60" y="30" width="10" height="20" fill="#FF4500" />
-            </svg>
-        </div>
-        <div class="flower" style="top: 150px; left: 50px;" >
-            <svg width="80" height="80">
-                <rect x="0" y="30" width="10" height="20" fill="#9370DB" />
-                <rect x="15" y="0" width="10" height="20" fill="#9370DB" />
-                <rect x="30" y="20" width="10" height="20" fill="#9370DB" />
-                <rect x="45" y="10" width="10" height="20" fill="#9370DB" />
-                <rect x="60" y="30" width="10" height="20" fill="#9370DB" />
-            </svg>
-        </div>
-        <div class="flower" style="top: 100px; right: 10px;">
-            <svg width="80" height="80">
-                <rect x="0" y="30" width="10" height="20" fill="#00BFFF" />
-                <rect x="15" y="0" width="10" height="20" fill="#00BFFF" />
-                <rect x="30" y="20" width="10" height="20" fill="#00BFFF" />
-                <rect x="45" y="10" width="10" height="20" fill="#00BFFF" />
-                <rect x="60" y="30" width="10" height="20" fill="#00BFFF" />
-            </svg>
-        </div>
-        <div class="flower" style="top: 200px; right: 30px;">
-            <svg width="80" height="80">
-                <rect x="0" y="30" width="10" height="20" fill="#00FF00" />
-                <rect x="15" y="0" width="10" height="20" fill="#00FF00" />
-                <rect x="30" y="20" width="10" height="20" fill="#00FF00" />
-                <rect x="45" y="10" width="10" height="20" fill="#00FF00" />
-                <rect x="60" y="30" width="10" height="20" fill="#00FF00" />
-            </svg>
-        </div>
-        <div class="flower" style="top: 150px; right: 50px;">
-            <svg width="80" height="80">
-                <rect x="0" y="30" width="10" height="20" fill="#FFA500" />
-                <rect x="15" y="0" width="10" height="20" fill="#FFA500" />
-                <rect x="30" y="20" width="10" height="20" fill="#FFA500" />
-                <rect x="45" y="10" width="10" height="20" fill="#FFA500" />
-                <rect x="60" y="30" width="10" height="20" fill="#FFA500" />
-            </svg>
-        </div>
+        <!-- Flower SVG elements -->
     </div>
-  
- 
 
     <div class="grass"></div>
 
     <div class="sun"></div>
-
 </body>
 </html>
+
 
 
