--- a/aquacueui.html
+++ b/aquacueui.html
@@ -30,7 +30,13 @@
         }
     </script>
     <style>
-        
+        body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 20px;
+    background-image: linear-gradient(to bottom right , #baedba, #8cdc8c, #dcecbd);
+}
+
         p {
             font-family: 'Georgia', sans-serif; 
             font-size: 18px; 
